# dmntk.atto.c

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  LLD.md  README.md  Taskfile.yml  build.sh
examples/: e1.dtb  e2.dtb  e3.dtb
scripts/: build-debug.sh  build-release.sh  clean.sh  debug.sh  rebuild-clion.sh  rebuild-debug.sh  rebuild-release.sh  rebuild.sh  release.sh  test-debug.sh  test.sh
src/: CMakeLists.txt  actions.c  actions.h  atto.h.in  box.c  box.h  cell.c  cell.h  editor.c  editor.h  glyphs.c  glyphs.h  main.c  main.rs  plane.c  plane.h  plane.rs
tests/: CMakeLists.txt  assertions.c  assertions.h  main.c  tc_cursor_init.c  tc_cursor_init.h  tc_cursor_move_down.c  tc_cursor_move_down.h  tc_cursor_move_left.c  tc_cursor_move_left.h  tc_cursor_move_right.c  tc_cursor_move_right.h  tc_cursor_move_up.c  tc_cursor_move_up.h  tc_display.c  tc_display.h  tc_glyphs.c  tc_glyphs.h  utils.c  utils.h
tests/expected/tc_display/: e001.dtb
